# event-flow-platform

./: .bandit  .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  alembic.ini  pyproject.toml  requirements.txt
.cursor/plans/: final_revision_event_flow_15962933.plan.md  production_event_system_plan_209190f7.plan.md
.cursor/rules/: venv.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 20260326_0001_create_orders_table.py
docker/: Dockerfile.api  Dockerfile.bot  Dockerfile.worker  docker-compose.yml
docker/prometheus/: prometheus.yml
docker/rabbitmq/: rabbitmq.conf
docs/: architecture.md  development.md  load-testing.md
docs/adr/: 001-redis-caching.md  002-rabbitmq-queues.md  003-kafka-events.md  004-nats-pubsub.md  005-fastapi-lifespan.md  006-worker-consumption-strategy.md
docs/api/: openapi.md  websocket.md
results/: benchmark_report.md  locust_summary.json
scripts/: aliases.ps1  benchmark.py  dev.sh  load_test.py  migrate.py  seed_data.py  task.ps1
src/api/: main.py
src/bot/: main.py  services.py
src/config/: logging.py  settings.py
src/models/: event.py  order.py  schemas.py
src/services/: kafka_service.py  nats_service.py  postgres_service.py  rabbitmq_service.py  redis_service.py
src/utils/: health.py  metrics.py
src/workers/: analytics_worker.py  consumer_runner.py  email_worker.py  logger_worker.py  runtime.py  telegram_worker.py
tests/: conftest.py
tests/integration/: test_integration_services.py
tests/test_api/: test_health.py  test_metrics.py  test_middleware.py  test_nats_bridge.py  (+1 more)
(+23 files in other folders)
